# Instant-Messaging

./: .gitignore  .ocamlformat  INSTALL.md  LICENCE  MakeFile  Makefile  README.md  exclude.lst
client/: Makefile
client/data/: cornell.json
client/src/: client.ml  controller.ml  controller.mli  dune  network.ml  network.mli  packager.ml  packager.mli
client/test/: dune
server/: .ocamlformat  Makefile
server/data/parser/: friend_accept_1.json  friend_reject_1.json  friend_req_1.json  get_msg_1.json  login_1.json  register_1.json  send_msg_1.json
server/src/: dune  parser.ml  parser.mli  processor.ml  processor.mli  server.ml
server/test/: main.ml
src/: Makefile  author.ml  author.mli  dune-workspace  html.html  index.html  main.ml  style.css
src/client/: Makefile
src/client/src/: command.ml  command.mli  controller.ml  controller.mli  database.ml  database.mli  dune  interface.ml  interface.mli  network.ml  network.mli  packager.ml  packager.mli  parser.ml  parser.mli
src/client/test/: dune  main.ml
src/server/: Makefile
src/server/data/parser/: friend_accept_1.json  friend_reject_1.json  friend_req_1.json  get_msg_1.json  (+3 more)
src/server/src/: database.ml  database.mli  dune  packager.ml  packager.mli  parser.ml  parser.mli  processor.ml  processor.mli
src/server/test/: dune  main.ml
src/util/: Makefile
src/util/src/: crypto.ml  crypto.mli  database.ml  database.mli  dune  msg.ml  msg.mli  time.ml  time.mli
src/util/test/: dune  main.ml
util/: Makefile  Util.opam  dune
util/src/: dune  parser.ml  parser.mli  time.mli
util/test/: main.ml
