opam-version: "2.0"
name: "util"
version: "~dev"
synopsis: "Util for Instant Messaging"
maintainer: "JamesZhang2 <jameszhang2019@outlook.com>"
authors:
  "JamesZhang2 <jameszhang2019@outlook.com>, calciiium <calciiium.ma@gmail.com>, angelac345 <angelachao345@gmail.com>"
license: "The MIT License"
homepage: "None"
bug-reports: "None"
depends: ["ocaml" "yojson" "unix"]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
dev-repo: "git+https://"